[workspace]
members = [
    "src/common/base",
    "src/placement-center",
    "src/cmd",
    "src/protocol",
]

resolver = "2"

[workspace.package]
name = "rust-mp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

#workspace members
placement-center = { path = "src/placement-center"}
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
comon-base = { path = "src/common/base" }