[workspace]
members = [
    "src/common/base",
    "src/placement-center",
    "src/cmd",
    "src/protocol",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.19"
log = "0.4.0"
log4rs = "1.2.0"
thiserror = "1.0.63"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.3"
dashmap = "6.0.1"
rocksdb = "0.22.0"
bincode = "1.3.3"
tokio-util = { version = "0.7.9", features = ["codec"] }


#workspace members
placement-center = { path = "src/placement-center"}
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }