[package]
name = "clients"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
common-base.workspace = true
log.workspace = true
log4rs.workspace = true
tokio.workspace = true
protocol.workspace = true
prost.workspace = true
mobc.workspace = true
dashmap.workspace = true
tonic.workspace = true
