[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "placement-center"
path = "src/placement-center/server.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
common-base.workspace = true
placement-center.workspace = true
log.workspace = true
log4rs.workspace = true
tokio.workspace = true

