[package]
name = "placement-center"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
log4rs.workspace = true
axum.workspace = true
common-base.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-build.workspace = true
tokio-util.workspace = true
protocol.workspace = true
dashmap.workspace = true
serde_json.workspace = true
#rocksdb.workspace = true
raft = { git = "https://github.com/robustmq/raft-rs",  features = ["prost-codec"], default-features = false }
bincode.workspace = true
slog = "2"
slog-term = "2.9.0"
slog-async = "2.8.0"